[gd_scene load_steps=3 format=3 uid="uid://b4mwot2pbh0hi"]

[ext_resource type="Script" path="res://Scripts/upgrade_button.gd" id="1_b1du3"]
[ext_resource type="FontFile" uid="uid://jh3tay3nrsx5" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_xsfwu"]

[node name="UpgradeButton" type="ColorRect"]
custom_minimum_size = Vector2(100, 30)
offset_right = 100.0
offset_bottom = 30.0
script = ExtResource("1_b1du3")

[node name="UpgradeName" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 98.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xsfwu")
theme_override_font_sizes/font_size = 8
text = "Name"

[node name="Description" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 13.0
offset_right = 98.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xsfwu")
theme_override_font_sizes/font_size = 4
text = "This text describes it"
autowrap_mode = 3

[node name="Level" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 2.0
offset_right = 98.0
offset_bottom = 12.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xsfwu")
theme_override_font_sizes/font_size = 4
text = "Lvl 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
